Initial Commit - App now shows recipe details - Shows detailed ingredients

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RecipeDetailsActivity"></activity>
+        <activity android:name=".RecipeDetailsActivity" />
+        <activity android:name=".IngredientsDetailsActivity"></activity>
     </application>
 
 </manifest>
